# fast-zero

./: .env-sample  .gitignore  README.md  pyproject.toml
fast_zero/: app.py  schemas.py
fast_zero/components/: health_check.py  prompts.py
tests/: conftest.py  test_app.py
